# callsign

./: .gitignore  LICENSE  README.md  README.rst  callsign.py  constants.py  pyproject.toml  utils.py
tests/: arguments_test.py  callsign_test.py  callsign_tests.py  conftest.py  lib_tests.py  type_checker_recipe_test.py  vulnerable_defaults_test.py
