[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "callsign"
version = "0.1.0"
description = "Simplified Introspection"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = [
  "introspection",
  "decorator",
  "metaprogramming",
  "function",
  "ddd",
  "decorator driven development",
  "signature",
]
authors = [
  { name = "muhamuhamuha" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
dev = [
    'pytest',
]

[project.urls]
repository = "https://github.com/muhamuhamuha/callsign"

